Image Caption Left Alignment Style Fix

--- a/sass/_av-misc.scss
+++ b/sass/_av-misc.scss
@@ -588,6 +588,11 @@ font-size: 1.5em;
   height: 161px;
 }
 
+/* Fix Image Caption Left Alignment */
+figure.wp-caption.alignleft {
+  margin-left: 0px;
+}
+
 /*--------------------------------------------------------------
 # Image Alignment: https://codex.wordpress.org/Styling_Images_in_Posts_and_Pages
 --------------------------------------------------------------*/
