--- a/style.css
+++ b/style.css
@@ -1215,6 +1215,10 @@ h4 {
   width: 161px;
   height: 161px; }
 
+/* Fix Image Caption Left Alignment */
+figure.wp-caption.alignleft {
+  margin-left: 0px; }
+
 /*--------------------------------------------------------------
 # Image Alignment: https://codex.wordpress.org/Styling_Images_in_Posts_and_Pages
 --------------------------------------------------------------*/
